--- a/styles/about.css
+++ b/styles/about.css
@@ -50,6 +50,43 @@
     /* line-height: -1; */
 }
 
+#about .about-content {
+    margin-left: 15px;
+    margin-right: 15px;
+    display: flex;
+    justify-content:space-between
+}
+
+#about .about-content {
+    margin-left: 15px;
+    margin-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;  /* Optional: Adds some space between the two sections */
+}
+
+#about .about-paragraph,
+#about .point-details {
+    width: 50%;  /* Each part takes 50% of the space */
+    box-sizing: border-box; /* Ensures padding doesn't overflow the width */
+}
+
+#about .about-paragraph {
+    font-family: 'Abyssinica SIL';
+    font-size: 18px;
+}
+
+#about .point-details {
+    font-family: 'Kadwa';
+    font-size: 20px;
+    /* gap: 80px; */
+}
+
+#about .point-details .details-container {
+    /* gap: 80  px; */
+}
+
+
 /* #about .ln{
     position: absolute;
     top: 0;
