--- a/styles/header.css
+++ b/styles/header.css
@@ -18,6 +18,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    /* width: 100%; */
     z-index: 1000;
   }
   
@@ -34,6 +35,7 @@ body {
     gap: 70px;
     padding: 0;
     margin: 0;
+    margin-right: 15px;
   }
   
   .headernav li {
@@ -72,20 +74,38 @@ body {
     background-color: black;
   }
   
-  .headernav li a.active {
-    color: black;
-  }
+.headernav li a.active {
+  color: black;
+}
+
+@media screen and (min-width: 1440px) {
   
-  /* Responsive Design */
-  /* @media (max-width: 768px) {
-    header {
-      flex-direction: column;
-      align-items: flex-start;
-    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
+  /* .header {
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 10px;
+    top: 0; */
+    /* left: -225px; */
+    /* width: 100%; */
+    /* z-index: 1000; */
+  /* } */
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+ 
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
   
-    .headernav ul {
-      flex-direction: column;
-      gap: 10px;
-    }
-  } */
+}
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
   
+}
+
+@media screen and (min-width: 0) and (max-width: 425px) {
+  
+}
