--- a/styles/home.css
+++ b/styles/home.css
@@ -1,13 +1,13 @@
 #home {
   background: linear-gradient(to bottom, #B39DF6, #C5BFD4);
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
 }
 
 #home .hero-title {
   line-height: 0.8;
   padding-left: 15px;
-  padding-top: 25px;
+  padding-top: 50px;
   padding-bottom: 1px;
   font-family: 'Inter';
 }
@@ -60,7 +60,8 @@
   transform: translate(-50% , -50%);
 }
 #home #profile-photo {
-  height: 20vw;
+  height: 50vh;
+  width: 30vw;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -79,7 +80,7 @@
 #section2 div {
   display: flex;
   justify-content: space-around;
-  margin-top: -60px;
+  margin-top: -102px;
 }
 
 #section2 p {
@@ -122,7 +123,37 @@
   font-size: 1.5em;
 }
 
-/* #home #section2 > p:hover {
-  transform: translateX(50px);
-  scale: 1.5;
-} */
+#section2 p:hover {
+  /* transform: translateX(10px); */
+  transform: scale3d(10px);
+  scale: 1.1;
+  transition: transform 0.3s ease, scale 0.3s ease;
+}
+
+@media screen and (min-width: 1440px) {
+  
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
+  #home {
+    /* background: linear-gradient(to bottom, #B39DF6, #C5BFD4); */
+    /* height: 100vh; */
+    /* width: 100%; */
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+ 
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  
+}
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+  
+}
+
+@media screen and (min-width: 0) and (max-width: 425px) {
+  
+}
